--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
   
 
   
-  <link rel="icon" href="https://find-nick.github.io/favicon.ico">
+  <link rel="icon" href="favicon.ico">
 
   
   
@@ -47,11 +47,11 @@
   <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="FN的幻想岛" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://find-nick.github.io/404.html" />
+<meta property="og:url" content="/404.html" />
 
 
   
-  <link rel="canonical" href="https://find-nick.github.io/404.html">
+  <link rel="canonical" href="/404.html">
 
   
   
@@ -59,8 +59,8 @@
 <meta itemprop="description" content="FN的幻想岛">
 
   
-  <link media="screen" rel="stylesheet" href='https://find-nick.github.io/css/common.css'>
-  <link media="screen" rel="stylesheet" href='https://find-nick.github.io/css/content.css'>
+  <link media="screen" rel="stylesheet" href='css/common.css'>
+  <link media="screen" rel="stylesheet" href='css/content.css'>
 
   
   
@@ -74,7 +74,7 @@
 
 
   
-<link rel="stylesheet" href='https://find-nick.github.io/css/index.css'>
+<link rel="stylesheet" href='css/index.css'>
 
 </head>
 
@@ -82,7 +82,7 @@
   <div id="wrapper">
     <header id="header">
   <h1>
-    <a href="https://find-nick.github.io">FN的幻想岛</a>
+    <a href="">FN的幻想岛</a>
   </h1>
 
   <nav>
