--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
   
 
   
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="/favicon.ico">
 
   
   
@@ -59,8 +59,8 @@
 <meta itemprop="description" content="FN的幻想岛">
 
   
-  <link media="screen" rel="stylesheet" href='css/common.css'>
-  <link media="screen" rel="stylesheet" href='css/content.css'>
+  <link media="screen" rel="stylesheet" href='/css/common.css'>
+  <link media="screen" rel="stylesheet" href='/css/content.css'>
 
   
   
@@ -74,7 +74,7 @@
 
 
   
-<link rel="stylesheet" href='css/index.css'>
+<link rel="stylesheet" href='/css/index.css'>
 
 </head>
 
@@ -82,7 +82,7 @@
   <div id="wrapper">
     <header id="header">
   <h1>
-    <a href="">FN的幻想岛</a>
+    <a href="/">FN的幻想岛</a>
   </h1>
 
   <nav>
