--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
 
   
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="/favicon.ico">
 
   
   
@@ -62,8 +62,8 @@
 <meta itemprop="description" content="FN的幻想岛">
 
   
-  <link media="screen" rel="stylesheet" href='css/common.css'>
-  <link media="screen" rel="stylesheet" href='css/content.css'>
+  <link media="screen" rel="stylesheet" href='/css/common.css'>
+  <link media="screen" rel="stylesheet" href='/css/content.css'>
 
   
   
@@ -77,7 +77,7 @@
 
 
   
-<link rel="stylesheet" href='css/index.css'>
+<link rel="stylesheet" href='/css/index.css'>
 
 </head>
 
@@ -85,7 +85,7 @@
   <div id="wrapper">
     <header id="header">
   <h1>
-    <a href="">FN的幻想岛</a>
+    <a href="/">FN的幻想岛</a>
   </h1>
 
   <nav>
