--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   
-  <meta name="author" content="FN的幻想岛">
+  <meta name="author" content="Find_NICK">
 
   
   
-  <meta name="description" content="FN的幻想岛">
+  <meta name="description" content="FN的博客">
   
 
   
@@ -19,7 +19,7 @@
 
   
   
-  <meta name="keywords" content=" OI  code  Algorithm ">
+  <meta name="keywords" content=" OI  code  algorithm  solution ">
   
 
   
@@ -45,7 +45,7 @@
 
   
   <meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="FN的幻想岛" />
+<meta property="og:description" content="FN的博客" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="/404.html" />
 
@@ -56,7 +56,7 @@
   
   
   <meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content="FN的幻想岛">
+<meta itemprop="description" content="FN的博客">
 
   
   <link media="screen" rel="stylesheet" href='/css/common.css'>
@@ -64,13 +64,13 @@
 
   
   
-  <title>404 Page not found - FN的幻想岛</title>
+  <title>404 Page not found - 一隅</title>
   
 
   
   <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="FN的幻想岛"/>
+<meta name="twitter:description" content="FN的博客"/>
 
 
   
@@ -81,10 +81,15 @@
 <body>
   <div id="wrapper">
     <header id="header">
+  
+  
+  
   <h1>
-    <a href="/">FN的幻想岛</a>
+    <a href="/">一隅</a>
   </h1>
-
+  
+  
+  
   <nav>
     
     <span class="nav-bar-item">
