--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   
-  <meta name="author" content="FN的幻想岛">
+  <meta name="author" content="Find_NICK">
 
   
   
-  <meta name="description" content="FN的幻想岛">
+  <meta name="description" content="FN的博客">
   
 
   
@@ -20,7 +20,7 @@
 
   
   
-  <meta name="keywords" content=" OI  code  Algorithm ">
+  <meta name="keywords" content=" OI  code  algorithm  solution ">
   
 
   
@@ -45,8 +45,8 @@
   
 
   
-  <meta property="og:title" content="FN的幻想岛" />
-<meta property="og:description" content="FN的幻想岛" />
+  <meta property="og:title" content="一隅" />
+<meta property="og:description" content="FN的博客" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="/" />
 
@@ -56,10 +56,10 @@
 
   
   
-  <link rel="alternate" type="application/rss+xml" href="/index.xml" title="FN的幻想岛" />
+  <link rel="alternate" type="application/rss+xml" href="/index.xml" title="一隅" />
   
-  <meta itemprop="name" content="FN的幻想岛">
-<meta itemprop="description" content="FN的幻想岛">
+  <meta itemprop="name" content="一隅">
+<meta itemprop="description" content="FN的博客">
 
   
   <link media="screen" rel="stylesheet" href='/css/common.css'>
@@ -67,13 +67,13 @@
 
   
   
-  <title>FN的幻想岛</title>
+  <title>一隅</title>
   
 
   
   <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="FN的幻想岛"/>
-<meta name="twitter:description" content="FN的幻想岛"/>
+<meta name="twitter:title" content="一隅"/>
+<meta name="twitter:description" content="FN的博客"/>
 
 
   
@@ -84,10 +84,15 @@
 <body>
   <div id="wrapper">
     <header id="header">
+  
+  
+  
   <h1>
-    <a href="/">FN的幻想岛</a>
+    <a href="/">一隅</a>
   </h1>
-
+  
+  
+  
   <nav>
     
     <span class="nav-bar-item">
