--- a/404.html
+++ b/404.html
@@ -64,7 +64,7 @@
 
   
   
-  <title>404 Page not found - 一隅</title>
+  <title>404 Page not found - 0x3f</title>
   
 
   
@@ -83,9 +83,9 @@
     <header id="header">
   
   
-  
+  <script src="https://cdn.jsdelivr.net/npm/instant.page/instantpage.min.js"></script>
   <h1>
-    <a href="/">一隅</a>
+    <a href="/">0x3f</a>
   </h1>
   
   
