--- a/about/index.html
+++ b/about/index.html
@@ -69,7 +69,7 @@
 
   
   
-  <title>About - 一隅</title>
+  <title>About - 0x3f</title>
   
 
   
@@ -88,9 +88,9 @@
     <header id="header">
   
   
-  
+  <script src="https://cdn.jsdelivr.net/npm/instant.page/instantpage.min.js"></script>
   <h1>
-    <a href="/">一隅</a>
+    <a href="/">0x3f</a>
   </h1>
   
   
