--- a/404.html
+++ b/404.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   
+  
   <meta name="author" content="Find_NICK">
 
   
@@ -88,6 +89,8 @@
     <a href="/">0x3f</a>
   </h1>
   
+
+  
   
   
   <nav>
@@ -122,8 +125,9 @@
 </footer>
 
   </div>
-
   
+  
+  <link media="screen" rel="stylesheet" href="/css/custom.css" />
   
 
   
