--- a/404.html
+++ b/404.html
@@ -75,7 +75,24 @@
 
   
   
-  <script> MathJax = { tex: { inlineMath: [['$', '$'], ['\\(', '\\)']], displayMath: [['$$','$$'], ['\\[', '\\]']], processEscapes: true, processEnvironments: true }, options: { skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre'] } }; window.addEventListener('load', (event) => { document.querySelectorAll("mjx-container").forEach(function(x){ x.parentElement.classList += 'has-jax'}) }); </script> <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script> <script id="MathJax-script" async src="https://unpkg.com/mathjax@3.2.2/es5/tex-mml-chtml.js"></script>
+  
+  <link rel="stylesheet" href="https://unpkg.com/katex@0.15.3/dist/katex.min.css" crossorigin="anonymous">
+<script defer src="https://unpkg.com/katex@0.15.3/dist/katex.min.js" crossorigin="anonymous"></script>
+<script defer src="https://unpkg.com/katex@0.15.3/dist/contrib/auto-render.min.js" crossorigin="anonymous"></script>
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    renderMathInElement(document.body, {
+      delimiters: [
+        { left: '$$', right: '$$', display: true },
+        { left: '\\[', right: '\\]', display: true },
+        { left: '$', right: '$', display: false },
+        { left: '\\(', right: '\\)', display: false }
+      ],
+      ignoredTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code', 'option'],
+      throwOnError: false
+    });
+  });
+</script>
   <nav>
     
     <span class="nav-bar-item">
