--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   
   
-  <meta name="keywords" content=" OI  code  algorithm  solution ">
+  <meta name="keywords" content=" OI  code  algorithm ">
   
 
   
