--- a/404.html
+++ b/404.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
   
   
   <meta name="author" content="Find_NICK">
@@ -55,7 +54,6 @@
 <meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content="FN的博客"/>
 
-
   
 <link rel="stylesheet" href='/css/index.css'>
 
@@ -75,10 +73,12 @@
   
   
   
+  
   <link rel="stylesheet" href="https://cdn.staticfile.org/KaTeX/0.16.8/katex.min.css" crossorigin="anonymous">
   <link rel="stylesheet" href="https://fonts.loli.net/css2?family=Noto+Serif+SC:wght@300;700&display=swap">
   <script defer src="https://cdn.staticfile.org/KaTeX/0.16.8/katex.min.js" crossorigin="anonymous"></script>
 <script defer src="https://cdn.staticfile.org/KaTeX/0.16.8/contrib/auto-render.min.js" crossorigin="anonymous"></script>
+<script defer src="https://cdn.staticfile.org/twikoo/1.6.18/twikoo.all.min.js"></script>
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     renderMathInElement(document.body, {
@@ -125,6 +125,7 @@
 </footer>
 
   </div>
+  
   
   
 
