--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
   
 
   
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="https://findnick.top/favicon.ico">
 
   
   
@@ -29,11 +29,11 @@
   <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="FN的博客" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="/404.html" />
+<meta property="og:url" content="https://findnick.top/404.html" />
 
 
   
-  <link rel="canonical" href="/404.html">
+  <link rel="canonical" href="https://findnick.top/404.html">
 
   
   
@@ -41,8 +41,8 @@
 <meta itemprop="description" content="FN的博客">
 
   
-  <link media="screen" rel="stylesheet" href='/css/common.css'>
-  <link media="screen" rel="stylesheet" href='/css/content.css'>
+  <link media="screen" rel="stylesheet" href='https://findnick.top/css/common.css'>
+  <link media="screen" rel="stylesheet" href='https://findnick.top/css/content.css'>
 
   
   
@@ -55,7 +55,7 @@
 <meta name="twitter:description" content="FN的博客"/>
 
   
-<link rel="stylesheet" href='/css/index.css'>
+<link rel="stylesheet" href='https://findnick.top/css/index.css'>
 
 </head>
 
@@ -66,7 +66,7 @@
   <script async src="/js/instantpage.js"></script>
   <link href="/css/custom.css" rel="stylesheet" />
   <h1>
-    <a href="/">0x3f</a>
+    <a href="https://findnick.top/">0x3f</a>
   </h1>
   
 
