--- a/404.html
+++ b/404.html
@@ -62,9 +62,6 @@
 <body>
   <div id="wrapper">
     <header id="header">
-  
-  <script async src="/js/instantpage.js"></script>
-  <link href="/css/custom.css" rel="stylesheet" />
   <h1>
     <a href="https://findnick.top/">0x3f</a>
   </h1>
@@ -74,12 +71,12 @@
   
   
   
-  <script async src="https://umami.findnick.top/script.js" data-website-id="21e61bb0-37d6-443a-84c6-e08cd3a33deb"></script>
+  
+  <link href="/css/custom.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://fonts.loli.net/css2?family=Noto+Serif+SC:wght@300;700&display=swap" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.staticfile.org/KaTeX/0.16.8/katex.min.css" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://fonts.loli.net/css2?family=Noto+Serif+SC:wght@300;700&display=swap">
   <script defer src="https://cdn.staticfile.org/KaTeX/0.16.8/katex.min.js" crossorigin="anonymous"></script>
 <script defer src="https://cdn.staticfile.org/KaTeX/0.16.8/contrib/auto-render.min.js" crossorigin="anonymous"></script>
-<script defer src="https://cdn.staticfile.org/twikoo/1.6.18/twikoo.all.min.js"></script>
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     renderMathInElement(document.body, {
@@ -94,6 +91,7 @@
     });
   });
 </script>
+<script defer src="https://cdn.staticfile.org/twikoo/1.6.18/twikoo.all.min.js"></script>
   <nav>
     
     <span class="nav-bar-item">
